# wingletopt

./: .editorconfig  .gitignore  README.md  setup.cfg  setup.py
.github/workflows/: build.yml
assignment/: basecase.py
src/wingletopt/: __init__.py  geometry.py
src/wingletopt/avl/: __init__.py
tests/: conftest.py
tests/test_avl/: test_avl.py
tests/test_wingletopt/: test_avl.py  test_geometry.py
tests/test_wingletopt/test_avl/: test_avl.py
