# MIT License
#
# Copyright (c) 2021 San Kilkis
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.

[metadata]
name = wingletopt
description = A winglet optimization module using AVL
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords =
    aerodynamics
    avl
license = MIT License
license-file = LICENSE
url = https://github.com/skilkis/wingletopt
author = San Kilkis
author_email = sankilkis@msn.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.8
    Topic :: Education

[options]
zip_safe = false
packages = find:
python_requires = >= 3.7
package_dir =
    = src
install_requires =
    numpy
    avlwrapper @ git+https://gitlab.com/skilkis/avlwrapper.git@wingletopt
setup_requires =
    setuptools_scm
    setuptools >= 40
    wheel
tests_require =
    pytest
    pytest-cov

[options.packages.find]
where = src

[options.package_data]
wingletopt = bin/avl.exe

[options.extras_require]
dev =
    flake8
    flake8-black
    flake8-docstrings
    flake8-isort
    mypy
    pytest
    pytest-cov

[flake8]
# Strict PEP-8 Guidelines for Line-Length and Doc-Strings
max-line-length = 79
max-doc-length = 72
exclude =
    # No need to traverse our git directory
    .git
    # There's no value in checking cache directories
    **/*__pycache__
    # Exclude VS Code Folder
    .vscode
    # Exclude Python Packages in .env
    .env
    # Exclude temporary build directory
    build
# Cyclomatic McCabe Complexity
max-complexity = 10
# Forcing Google convention docstrings
docstring-convention = google
extend-ignore =
    D107 # Silences missing Docstring in __init__()
    D104 # Silences missing docstring in public package
    D202 # Silences no blank lines allowed after docstring (for Black compat.)
    W503 # Silences line-break not after operator (This is a new convention)
    E203 # Silences whitespace before ':' (for Black compatibility)
# D101: Silences missing docstring in public class for tests directory
per-file-ignores =
    tests/*:D101,D100

[tool:isort]
line_length = 79
# Sets the imports which should appear as third-party packages
known_third_party =
    numpy
    avlwrapper
known_first_party = wingletopt
# The settings below add compatibility for use with the Black formatter
# See: https://github.com/psf/black/issues/127#issuecomment-520760380
multi_line_output = 3
include_trailing_comma = True

[tool:pytest]
# Runs coverage.py through use of the pytest-cov plugin
# An xml report is generated and results are output to the terminal
addopts =
    --cov
    --cov-report xml:coverage.xml
    --cov-report term
filterwarnings =
    ignore::DeprecationWarning:jinja2.*:
markers =
    sphinx
# Sets the minimum allowed pytest version
minversion = 5.0
# Sets the path where test files are located (Speeds up Test Discovery)
testpaths = tests

[coverage:run]
# Due to a strange bug with xml output of coverage.py not writing the full-path
# of the sources, the full root directory is presented as a source alongside
# the main package. As a result any importable Python file/package needs to be
# included in the omit
source =
    wingletopt
    .
# Excludes the following directories from the coverage report
# .env = Default name of the virtual environment from CONTRIBUTING.md
omit =
    .env/*
    tests/*
    setup.py

# Generate stubs with stubgen -p wingletopt -o src
[tool:mypy]
disallow_untyped_defs = True
disallow_untyped_calls = False
disallow_incomplete_defs = True
check_untyped_defs = True
no_implicit_optional = True

